Konfigurationsoptimierung und mehr

--- a/programs.ini
+++ b/programs.ini
@@ -1,44 +1,152 @@
 ; TaskPilot Konfigurationsdatei
-;
-; Format:
-; [Anzeigename]
-; ProcessName=prozessname (ohne .exe)
-; DisplayName=Anzeigename in der Oberfläche
-; Description=Optionale Beschreibung
-;
-; Beispiele:
+; Generiert am: 2025-12-06 18:56:45
 
-[Visual Studio Code]
-ProcessName=Code
-DisplayName=Visual Studio Code
-Description=Code-Editor
+[01AS01]
+ProcessName=01as01
+DisplayName=01AS01
+StartCommand=D:\github\XWPSIM\Simulation\01AS01.exe FSD="D:\github\XWPSIM\Simulation\Settings\px01AS01\PXC200-E.D.xml" ASS="D:\github\XWPSIM\Simulation\Settings\px01AS01\ASSettings.xml" ASC="D:\github\XWPSIM\Simulation\Settings\px01AS01\ASContext.xml" DID="01AS01"
+AutoRestart=true
 
-[Google Chrome]
-ProcessName=chrome
-DisplayName=Google Chrome
-Description=Webbrowser
+[01AS02]
+ProcessName=01as02
+DisplayName=01AS02
+StartCommand=D:\github\XWPSIM\Simulation\01AS02.exe FSD="D:\github\XWPSIM\Simulation\Settings\px01AS02\PXC200-E.D.xml" ASS="D:\github\XWPSIM\Simulation\Settings\px01AS02\ASSettings.xml" ASC="D:\github\XWPSIM\Simulation\Settings\px01AS02\ASContext.xml" DID="01AS02"
+AutoRestart=true
 
-[Microsoft Edge]
-ProcessName=msedge
-DisplayName=Microsoft Edge
-Description=Webbrowser
+[01OHNG]
+ProcessName=01ohng
+DisplayName=01OHNG
+StartCommand=D:\github\XWPSIM\Simulation\01OHNG.exe FSD="D:\github\XWPSIM\Simulation\Settings\px01OHNG\PXC200-E.D.xml" ASS="D:\github\XWPSIM\Simulation\Settings\px01OHNG\ASSettings.xml" ASC="D:\github\XWPSIM\Simulation\Settings\px01OHNG\ASContext.xml" DID="01OHNG"
+AutoRestart=true
 
-[Notepad]
-ProcessName=notepad
-DisplayName=Editor
-Description=Windows Notepad
+[01OHPX]
+ProcessName=01ohpx
+DisplayName=01OHPX
+StartCommand=D:\github\XWPSIM\Simulation\01OHPX.exe FSD="D:\github\XWPSIM\Simulation\Settings\px01OHPX\PXC200-E.D.xml" ASS="D:\github\XWPSIM\Simulation\Settings\px01OHPX\ASSettings.xml" ASC="D:\github\XWPSIM\Simulation\Settings\px01OHPX\ASContext.xml" DID="01OHPX"
+AutoRestart=true
 
-[Calculator]
-ProcessName=CalculatorApp
-DisplayName=Rechner
-Description=Windows Rechner
+[02AS01]
+ProcessName=02as01
+DisplayName=02AS01
+StartCommand=D:\github\XWPSIM\Simulation\02AS01.exe FSD="D:\github\XWPSIM\Simulation\Settings\px02AS01\PXC200-E.D.xml" ASS="D:\github\XWPSIM\Simulation\Settings\px02AS01\ASSettings.xml" ASC="D:\github\XWPSIM\Simulation\Settings\px02AS01\ASContext.xml" DID="02AS01"
+AutoRestart=true
 
-[Visual Studio]
-ProcessName=devenv
-DisplayName=Visual Studio
-Description=IDE
+[02AS02]
+ProcessName=02as02
+DisplayName=02AS02
+StartCommand=D:\github\XWPSIM\Simulation\02AS02.exe FSD="D:\github\XWPSIM\Simulation\Settings\px02AS02\PXC200-E.D.xml" ASS="D:\github\XWPSIM\Simulation\Settings\px02AS02\ASSettings.xml" ASC="D:\github\XWPSIM\Simulation\Settings\px02AS02\ASContext.xml" DID="02AS02"
+AutoRestart=true
 
-[PowerShell]
-ProcessName=pwsh
-DisplayName=PowerShell
-Description=PowerShell Terminal
+[02OHNG]
+ProcessName=02ohng
+DisplayName=02OHNG
+StartCommand=D:\github\XWPSIM\Simulation\02OHNG.exe FSD="D:\github\XWPSIM\Simulation\Settings\px02OHNG\PXC200-E.D.xml" ASS="D:\github\XWPSIM\Simulation\Settings\px02OHNG\ASSettings.xml" ASC="D:\github\XWPSIM\Simulation\Settings\px02OHNG\ASContext.xml" DID="02OHNG"
+AutoRestart=true
+
+[02OHPX]
+ProcessName=02ohpx
+DisplayName=02OHPX
+StartCommand=D:\github\XWPSIM\Simulation\02OHPX.exe FSD="D:\github\XWPSIM\Simulation\Settings\px02OHPX\PXC200-E.D.xml" ASS="D:\github\XWPSIM\Simulation\Settings\px02OHPX\ASSettings.xml" ASC="D:\github\XWPSIM\Simulation\Settings\px02OHPX\ASContext.xml" DID="02OHPX"
+AutoRestart=true
+
+[04AS01]
+ProcessName=04as01
+DisplayName=04AS01
+StartCommand=D:\github\XWPSIM\Simulation\04AS01.exe FSD="D:\github\XWPSIM\Simulation\Settings\px04AS01\PXC200-E.D.xml" ASS="D:\github\XWPSIM\Simulation\Settings\px04AS01\ASSettings.xml" ASC="D:\github\XWPSIM\Simulation\Settings\px04AS01\ASContext.xml" DID="04AS01"
+AutoRestart=true
+
+[04AS02]
+ProcessName=04as02
+DisplayName=04AS02
+StartCommand=D:\github\XWPSIM\Simulation\04AS02.exe FSD="D:\github\XWPSIM\Simulation\Settings\px04AS02\PXC200-E.D.xml" ASS="D:\github\XWPSIM\Simulation\Settings\px04AS02\ASSettings.xml" ASC="D:\github\XWPSIM\Simulation\Settings\px04AS02\ASContext.xml" DID="04AS02"
+AutoRestart=true
+
+[04OHNG]
+ProcessName=04ohng
+DisplayName=04OHNG
+StartCommand=D:\github\XWPSIM\Simulation\04OHNG.exe FSD="D:\github\XWPSIM\Simulation\Settings\px04OHNG\PXC200-E.D.xml" ASS="D:\github\XWPSIM\Simulation\Settings\px04OHNG\ASSettings.xml" ASC="D:\github\XWPSIM\Simulation\Settings\px04OHNG\ASContext.xml" DID="04OHNG"
+AutoRestart=true
+
+[04OHPX]
+ProcessName=04ohpx
+DisplayName=04OHPX
+StartCommand=D:\github\XWPSIM\Simulation\04OHPX.exe FSD="D:\github\XWPSIM\Simulation\Settings\px04OHPX\PXC200-E.D.xml" ASS="D:\github\XWPSIM\Simulation\Settings\px04OHPX\ASSettings.xml" ASC="D:\github\XWPSIM\Simulation\Settings\px04OHPX\ASContext.xml" DID="04OHPX"
+AutoRestart=true
+
+[06AS01]
+ProcessName=06as01
+DisplayName=06AS01
+StartCommand=D:\github\XWPSIM\Simulation\06AS01.exe FSD="D:\github\XWPSIM\Simulation\Settings\px06AS01\PXC200-E.D.xml" ASS="D:\github\XWPSIM\Simulation\Settings\px06AS01\ASSettings.xml" ASC="D:\github\XWPSIM\Simulation\Settings\px06AS01\ASContext.xml" DID="06AS01"
+AutoRestart=true
+
+[06AS02]
+ProcessName=06as02
+DisplayName=06AS02
+StartCommand=D:\github\XWPSIM\Simulation\06AS02.exe FSD="D:\github\XWPSIM\Simulation\Settings\px06AS02\PXC200-E.D.xml" ASS="D:\github\XWPSIM\Simulation\Settings\px06AS02\ASSettings.xml" ASC="D:\github\XWPSIM\Simulation\Settings\px06AS02\ASContext.xml" DID="06AS02"
+AutoRestart=true
+
+[06OHNG]
+ProcessName=06ohng
+DisplayName=06OHNG
+StartCommand=D:\github\XWPSIM\Simulation\06OHNG.exe FSD="D:\github\XWPSIM\Simulation\Settings\px06OHNG\PXC200-E.D.xml" ASS="D:\github\XWPSIM\Simulation\Settings\px06OHNG\ASSettings.xml" ASC="D:\github\XWPSIM\Simulation\Settings\px06OHNG\ASContext.xml" DID="06OHNG"
+AutoRestart=true
+
+[06OHPX]
+ProcessName=06ohpx
+DisplayName=06OHPX
+StartCommand=D:\github\XWPSIM\Simulation\06OHPX.exe FSD="D:\github\XWPSIM\Simulation\Settings\px06OHPX\PXC200-E.D.xml" ASS="D:\github\XWPSIM\Simulation\Settings\px06OHPX\ASSettings.xml" ASC="D:\github\XWPSIM\Simulation\Settings\px06OHPX\ASContext.xml" DID="06OHPX"
+AutoRestart=true
+
+[08AS01]
+ProcessName=08as01
+DisplayName=08AS01
+StartCommand=D:\github\XWPSIM\Simulation\08AS01.exe FSD="D:\github\XWPSIM\Simulation\Settings\px08AS01\PXC200-E.D.xml" ASS="D:\github\XWPSIM\Simulation\Settings\px08AS01\ASSettings.xml" ASC="D:\github\XWPSIM\Simulation\Settings\px08AS01\ASContext.xml" DID="08AS01"
+AutoRestart=true
+
+[08AS02]
+ProcessName=08as02
+DisplayName=08AS02
+StartCommand=D:\github\XWPSIM\Simulation\08AS02.exe FSD="D:\github\XWPSIM\Simulation\Settings\px08AS02\PXC200-E.D.xml" ASS="D:\github\XWPSIM\Simulation\Settings\px08AS02\ASSettings.xml" ASC="D:\github\XWPSIM\Simulation\Settings\px08AS02\ASContext.xml" DID="08AS02"
+AutoRestart=true
+
+[08OHNG]
+ProcessName=08ohng
+DisplayName=08OHNG
+StartCommand=D:\github\XWPSIM\Simulation\08OHNG.exe FSD="D:\github\XWPSIM\Simulation\Settings\px08OHNG\PXC200-E.D.xml" ASS="D:\github\XWPSIM\Simulation\Settings\px08OHNG\ASSettings.xml" ASC="D:\github\XWPSIM\Simulation\Settings\px08OHNG\ASContext.xml" DID="08OHNG"
+AutoRestart=true
+
+[08OHPX]
+ProcessName=08ohpx
+DisplayName=08OHPX
+StartCommand=D:\github\XWPSIM\Simulation\08OHPX.exe FSD="D:\github\XWPSIM\Simulation\Settings\px08OHPX\PXC200-E.D.xml" ASS="D:\github\XWPSIM\Simulation\Settings\px08OHPX\ASSettings.xml" ASC="D:\github\XWPSIM\Simulation\Settings\px08OHPX\ASContext.xml" DID="08OHPX"
+AutoRestart=true
+
+[10AS01]
+ProcessName=10as01
+DisplayName=10AS01
+StartCommand=D:\github\XWPSIM\Simulation\10AS01.exe FSD="D:\github\XWPSIM\Simulation\Settings\px10AS01\PXC200-E.D.xml" ASS="D:\github\XWPSIM\Simulation\Settings\px10AS01\ASSettings.xml" ASC="D:\github\XWPSIM\Simulation\Settings\px10AS01\ASContext.xml" DID="10AS01"
+AutoRestart=true
+
+[10AS02]
+ProcessName=10as02
+DisplayName=10AS02
+StartCommand=D:\github\XWPSIM\Simulation\10AS02.exe FSD="D:\github\XWPSIM\Simulation\Settings\px10AS02\PXC200-E.D.xml" ASS="D:\github\XWPSIM\Simulation\Settings\px10AS02\ASSettings.xml" ASC="D:\github\XWPSIM\Simulation\Settings\px10AS02\ASContext.xml" DID="10AS02"
+AutoRestart=true
+
+[10OHNG]
+ProcessName=10ohng
+DisplayName=10OHNG
+StartCommand=D:\github\XWPSIM\Simulation\10OHNG.exe FSD="D:\github\XWPSIM\Simulation\Settings\px10OHNG\PXC200-E.D.xml" ASS="D:\github\XWPSIM\Simulation\Settings\px10OHNG\ASSettings.xml" ASC="D:\github\XWPSIM\Simulation\Settings\px10OHNG\ASContext.xml" DID="10OHNG"
+AutoRestart=true
+
+[10OHPX]
+ProcessName=10ohpx
+DisplayName=10OHPX
+StartCommand=D:\github\XWPSIM\Simulation\10OHPX.exe FSD="D:\github\XWPSIM\Simulation\Settings\px10OHPX\PXC200-E.D.xml" ASS="D:\github\XWPSIM\Simulation\Settings\px10OHPX\ASSettings.xml" ASC="D:\github\XWPSIM\Simulation\Settings\px10OHPX\ASContext.xml" DID="10OHPX"
+AutoRestart=true
+
+[FDTAS01]
+ProcessName=fdtas01
+DisplayName=FDTAS01
+StartCommand=D:\github\XWPSIM\Simulation\FDTAS01.exe FSD="D:\github\XWPSIM\Simulation\Settings\pxFDTAS01\PXC200-E.D.xml" ASS="D:\github\XWPSIM\Simulation\Settings\pxFDTAS01\ASSettings.xml" ASC="D:\github\XWPSIM\Simulation\Settings\pxFDTAS01\ASContext.xml" DID="FDTAS01"
+AutoRestart=true
